--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node node_modules/webpack-dev-server/bin/webpack-dev-server.js -d --hot --inline --colors --config webpack/dev.config.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,68 @@
   "bugs": {
     "url": "https://github.com/alexx29/ImageManagmenet/issues"
   },
-  "homepage": "https://github.com/alexx29/ImageManagmenet#readme"
+  "homepage": "https://github.com/alexx29/ImageManagmenet#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.5.5",
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.0.0",
+    "@babel/plugin-transform-react-inline-elements": "^7.2.0",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "autoprefixer": "^8.5.1",
+    "babel-gettext-plugin": "^2.2.0",
+    "babel-loader": "^8.0.0",
+    "babel-plugin-relay": "^5.0.0",
+    "clean-webpack-plugin": "^0.1.19",
+    "css-loader": "^0.28.7",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-to-json": "^3.3.5",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "file-loader": "^1.1.6",
+    "get-graphql-schema": "^2.1.1",
+    "html-webpack-plugin": "^3.2.0",
+    "identity-obj-proxy": "^3.0.0",
+    "img-loader": "^2.0.0",
+    "node-sass": "^4.11.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "postcss-flexbugs-fixes": "^3.3.1",
+    "postcss-loader": "^2.1.5",
+    "prettier": "^1.16.4",
+    "react-test-renderer": "^16.7.0",
+    "relay-compiler": "^1.5.0",
+    "sass-loader": "^6.0.6",
+    "sass-resources-loader": "^1.3.0",
+    "style-loader": "^0.18.2",
+    "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^0.5.9",
+    "watch-ignore-webpack-plugin": "^1.0.0",
+    "webpack": "^4.38.0",
+    "webpack-auto-inject-version": "^1.2.2",
+    "webpack-cli": "^3.3.6",
+    "webpack-dev-server": "^3.1.4",
+    "webpack-merge": "^4.1.4"
+  },
+  "dependencies": {
+    "konva": "4.0.13",
+    "react": "^16.10.2",
+    "react-dom": "16.10.1",
+    "react-konva": "16.10.1-0",
+    "react-router-dom": "^5.1.2",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/runtime": "^7.0.0-beta.55",
+    "copy-webpack-plugin": "^5.0.0",
+    "core-js": "^3.1.4",
+    "lodash": "^4.17.11",
+    "npm": "^5.7.1",
+    "react-app-polyfill": "^1.0.1",
+    "react-relay": "^1.5.0",
+    "react-svg-loader": "^3.0.3",
+    "relay-runtime": "^1.3.0",
+    "whatwg-fetch": "^2.0.4"
+  }
 }
